Fix bottom wheel show white space (#156)
Why:
* https://github.com/Subvisual-Academy/subvisuwheel/issues/106

How:
* Adding display: flex to the wrapper

--- a/frontend/src/pages/HomePage/index.module.css
+++ b/frontend/src/pages/HomePage/index.module.css
@@ -20,6 +20,7 @@
   position: fixed;
   bottom: 0;
   left: 0;
+  display: flex;
 }
 
 .buttonWrapper {
