--- a/frontend/src/pages/PrizePage/index.module.css
+++ b/frontend/src/pages/PrizePage/index.module.css
@@ -25,6 +25,7 @@
   right: 0;
   bottom: 0;
   z-index: 0;
+  display: flex;
 }
 
 .buttonWrapper {
